fixed no-scroll on mobile, made alignElement Function

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -152,6 +152,8 @@
       grid-area: align;
 
       position: relative;
+
+      touch-action: none;
     }
 
     .grid-display {
